-issue#4871: Realtime popup window experiences issues on some browsers
-issue#4873: Correct Settings-->Authentication fields visible status
-issue#4880: The MySQL get_lock() function can lead to stalled boost and dsstats processes
-issue#4882: Under rare conditions the boost process can get hung until the poller times out
-issue#4884: Graph XPort Issues with PHP 8.x
-feature#4533: Restructuring RRDfile paths takes too long on large systems and will stop polling for potentially several hours
-feature#4820: Make it possible to only import certain components when importing packages
-feature#4825: Add update_device.php script to cli folder
-feature#4827: Move all Help pages to docs.cacti.net if the page is reachable
-feature#4832: Show PHP INI locations during install
-feature#4833: Detect PHP INI values that are different in the INI vs running config
-feature#4870: Add gradient support for AREA charts
-feature#4872: Add missing and more recent CDEF functions for RRDtool
-feature#4881: When boost is running, it's not clear which processes are running and how long they have to complete

1.2.21
-issue#4531: Correct duplicate keys within database
-issue#4614: Add support for hooks during polling loop or at poller end
-issue#4683: When adding a device, errors may be reported whilst updating templates
-issue#4684: When creating RRD error image, font may not exist by xmacan
-issue#4685: Correct issues with corrupted Cacti Packages
-issue#4687: Poller output not empty all the time
-issue#4688: When running under PHP 5.4, certain operators are not valid by ddb4github
-issue#4689: Package Import generates errors when you try to import directory or non-file
-issue#4693: Correct issues with Heartbeat definitions under PHP 8.x
-issue#4695: When importing packages, hash types are not properly processed by ddb4github
-issue#4697: Login problem
-issue#4698: When creating a device, unexpected poller down message may be shown