@@ -1938,8 +1938,8 @@ CREATE TABLE host (
   max_oids int(10) unsigned default '10',
   bulk_walk_size int(11) DEFAULT '-1',
   device_threads tinyint(3) unsigned NOT NULL DEFAULT '1',
-  deleted char(2) default '',
-  disabled char(2) default NULL,
+  deleted char(2) NOT NULL default '',
+  disabled char(2) NOT NULL default '',
   status tinyint(3) unsigned NOT NULL default '0',
   status_event_count mediumint(8) unsigned NOT NULL default '0',
   status_fail_date timestamp NOT NULL default '0000-00-00 00:00:00',
